--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "axios": "^0.21.0",
+    "chroma-js": "^2.1.0",
+    "framer-motion": "^2.9.4",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-query": "^2.26.2"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.0.0",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "eslint-config-prettier": "^6.15.0",
