--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
     "react-query": "^2.26.2"
   },
   "devDependencies": {
