--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "chroma-js": "^2.1.0",
     "framer-motion": "^2.9.4",
+    "lodash.random": "^3.2.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
